# diso_grpc_rust

./: Cargo.toml  README.md  build.rs
proto/: disogrpc.proto
src/: client.rs  lib.rs  server.rs
